--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -35,10 +35,21 @@
     "Dark Mood": "الوضع الليلي",
     "Enter Old PassEquation" : "أدخل المعادلة الحالية..",
     "Enter New PassEquation" : "أدخل المعادلة الجديدة..",
+    "setEquation" : "أدخل معادلة المرور",
     "First Number" : "الرقم الأول",
     "Second Number" : "الرقم الثاني",
     "Sign":"الإشارة",
-    "passEquation Changed" : "تم تغيير معادلة المرور بنجاح"
+    "passEquation Changed" : "تم تغيير معادلة المرور بنجاح",
+    "passEquation seted" : "تم إضافة معادلة المرور بنجاح",
+    "page_1_body" : "الحاسبة السحرية هي حاسبة فعالة للعمليات الأربعة",
+    "page_2_body" : "عند إدخال معالة محددة مسبقاً، يتم فتح تطبيق مخفي",
+    "page_3_body" : "كتابة اليوميات وتسجيل الملاحظات ومتابعة المهام في مكان واحد",
+    "page_4_rule_1" : "لاحظ انه في حالة نسيانك للمعادلة ، لن تتمكن من إعادة ضبطها",
+    "page_4_rule_2" : "عليك اتباع النسق التالي {رقم ، عملية ، رقم}",
+    "page_4_rule_3" : "الأرقام يجب ان تكون موجبة ، يمكن ان تحتوي فاصلة عشرية",
+    "page_4_rule_4" : "الإشارة يجب ان تكون واحدة من العمليات الأربعة {+ ، - , / ، *} فقط",
+    "page_4_rule_5" : " يمكنك دائماً فتح صفحة الإعدادات عن طريق ادخال ثلاثة أصفار..  '000'" 
+    
 
 
 }
