--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -42,14 +42,15 @@
     "passEquation Changed" : "تم تغيير معادلة المرور بنجاح",
     "passEquation seted" : "تم إضافة معادلة المرور بنجاح",
     "page_1_body" : "الحاسبة السحرية هي حاسبة فعالة للعمليات الأربعة",
-    "page_2_body" : "عند إدخال معالة محددة مسبقاً، يتم فتح تطبيق مخفي",
+    "page_2_body" : "عند إدخال معالة محددة مسبقاً ، يتم فتح تطبيق مخفي",
     "page_3_body" : "كتابة اليوميات وتسجيل الملاحظات ومتابعة المهام في مكان واحد",
-    "page_4_rule_1" : "لاحظ انه في حالة نسيانك للمعادلة ، لن تتمكن من إعادة ضبطها",
+    "page_4_rule_1" : "في حال نسيانك للمعادلة ، لن تتمكن من إعادة ضبطها.",
     "page_4_rule_2" : "عليك اتباع النسق التالي {رقم ، عملية ، رقم}",
-    "page_4_rule_3" : "الأرقام يجب ان تكون موجبة ، يمكن ان تحتوي فاصلة عشرية",
-    "page_4_rule_4" : "الإشارة يجب ان تكون واحدة من العمليات الأربعة {+ ، - , / ، *} فقط",
-    "page_4_rule_5" : " يمكنك دائماً فتح صفحة الإعدادات عن طريق ادخال ثلاثة أصفار..  '000'" 
-    
+    "page_4_rule_3" : "الأرقام يجب ان تكون موجبة ، يمكن ان تحتوي فاصلة عشرية.",
+    "page_4_rule_4" : " يجب ان تكون واحدة من العمليات الأربعة + - / * فقط.",
+    "page_4_rule_5" : " يمكنك دائماً فتح صفحة الإعدادات عن طريق ادخال ثلاثة أصفار.. '000'",
+    "Done" : "تم",
+    "last modify" : "اخر تعديل : "
 
 
 }
